Hid overflowx for html

--- a/style.css
+++ b/style.css
@@ -1250,6 +1250,7 @@ footer a {
 html {
   background: rgb(20, 20, 20);
   position: relative;
+  overflow-x: hidden;
   overscroll-behavior-y: none;
 }
 
